--- a/sass/components/_product-card.scss
+++ b/sass/components/_product-card.scss
@@ -79,7 +79,7 @@
   
   @include media-breakpoint-down(lg) {
     .product-card {
-      width: 80%;
+      width: 100%;
       margin: 0 auto;
     }
   }
